added registration and login
